tests/exec/pos/conditionals_else.hsc
fn main() {
  let n = 1;
  if (n == 2) {
    write("two");
  } else {
    write("not two");
  }
}
