tests/exec/neg/error_exit2.hsc
fn main() {
  write("err2");
  exit(2);
}
